# v3

./: .gitignore  biome.json  ipfs-ens-deploy-guide.md
be/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  cargo.toml  rustfinity.json  spec.yaml
be/.claude/: settings.local.json
be/.sqlx/: query-471254a17247b36ba69d81fa8f220758fad685cb6255036bfec8aa15eaa09b75.json  query-47ca81821affae02043f0c5ba109470f69a3dd560756722aff42cec0b0f62f24.json  query-50e8c947f8e298882ea153fde58bdbcab5524c51529a5c1f4f7bd70433f3d866.json  query-544f3746c6c39ffd5de2680a008708140ad438dc83aaa8d052034faec26067fb.json  query-5730a376fad8ba87d21af9f461ad79da22c87684dad0c83569184421fe5533d2.json  query-5fb7cfa4092710b78f5cc1e938dab38350b26e7f55cb8e65420ed9463127d335.json  query-933529b2bf2dabfd114b284331629abd02e974e6a87b6ff8a82a5093b8270c81.json  query-d1fc2c06b5fdb23e49afc0e683e172c619873582656454f99d190728d9503fe7.json  query-e492c732c854e83f0ff687a62fc3daa776f86d7b6f9cdd4d32fafbfd1acdf176.json  query-edf380a33e5af60055e27be7b52155a5dc08151671f82a08613f100a5b818b94.json  query-ee729f79b4b58969460bb715dcd14e6e61b3c07d2698f96f18385cd1734a5b1d.json  query-ee8d119ae043f39b3751fc48a94d0c90714b2081217335b0f3d58d22cb7efc1f.json  query-fdddd0852b9bac6952a90a1d35c7daab77bb277c79a61fcd0d3b0b81c3d0b297.json
be/migrations/: 20260126103948_books_table.sql  20260325221814_songs_table.sql  20260329045005_daily_steps.sql
be/scripts/: init_db.sh
be/src/: config.rs  email_client.rs  errors.rs  lib.rs  main.rs  middleware.rs  startup.rs
be/src/common/: api_response.rs  mod.rs  utils.rs  valid_string_entry.rs
be/src/handlers/: auth.rs  books.rs  mod.rs  songs.rs  steps.rs
be/src/routes/: auth.rs  books.rs  check.rs  mod.rs  songs.rs  steps.rs
be/src/services/: auth.rs  books.rs  mod.rs  songs.rs  steps.rs
be/src/types/: app.rs  auth.rs  books.rs  mod.rs  songs.rs  steps.rs
be/tests/: check.rs
blog/: config.toml  netlify.toml
blog/content/blog/: first.md
blog/public/: index.html  robots.txt  rss.xml  sitemap.xml  style.css
blog/public/blog/: index.html
blog/public/blog/first/: index.html
blog/public/page/1/: index.html
blog/sass/: style.scss
blog/templates/: base.html  blog-page.html  blog.html  index.html
client/: index.html  netlify.toml  package-lock.json  package.json  tsconfig.app.json
client/src/: index.css  main.tsx  routeTree.gen.ts  router.ts
client/src/assets/logos/favicon_io/: about.txt
client/src/components/: AdminGuard.tsx  StepsChart.tsx
client/src/components/admin/: BookFormModal.tsx  SongFormModal.tsx
client/src/lib/: api.ts  constants.ts  types.ts  utils.ts
client/src/lib/context/: AuthContext.tsx
client/src/lib/hooks/: useBook.ts  useGetPosts.ts  useGetReads.ts  useSongs.ts  useSteps.ts
client/src/routes/: __root.tsx  about.tsx  index.tsx
client/src/routes/admin/: index.tsx  login.tsx
client/src/routes/admin/books/: index.tsx  new.tsx
client/src/routes/admin/songs/: index.tsx
