[package]
name = "be"
version = "0.1.0"
authors = ["Nkemjika Ohanyere <contact@nkem.dev>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "be"

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
actix-web = "4"
actix-cors = "0.7.1"
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = "1.0.228"
thiserror = "2.0.17"
serde_json = "1.0.145"
dotenvy = "0.15.7"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing = "0.1.43"
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3.10"
tracing-log = "0.2"
sqlx = {version="0.8.6", features = ["runtime-tokio-rustls", "macros", "postgres", "tls-rustls-ring-webpki", "chrono", "uuid", "ipnetwork", "migrate"]}
uuid = { version = "1.20.0", features = ["serde", "v4"] }
secrecy = { version = "0.10.3", features = ["serde"] }
serde-aux = "4.7.0"
unicode-segmentation = "1.9.0"
claims = "0.8.0"
actix-governor = "0.10.0"
argon2 = "0.5.3"
jsonwebtoken = "10.3.0"
actix-web-httpauth = "0.8.2"
